Fixed stretched photos

--- a/public/css/driverStyle.css
+++ b/public/css/driverStyle.css
@@ -86,9 +86,25 @@ body {
   text-align: center;
   font-family: "Muli", sans-serif;
 }
-.column1 img {
+.imageClass {
+  background-image: url('../images/signUp.jpeg');
   height: 300px;
+  background-size: cover;
+  background-position: center;
 }
+.imageClass1 {
+  background-image: url('../images/carPhone.jpeg');
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+.imageClass2 {
+  background-image: url('../images/happyPerson.jpeg');
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+
 .column1 p {
   padding-top: 100px;
 }
@@ -137,5 +153,10 @@ body {
   }
   .column1 p {
     padding-top: 10px;
+  }
+  .getStarted {
+    text-align: center;
+    padding: 20px;
+    padding-top: 910px;
   }
 }
